--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="istriangle.html">Is Triangle ?</a>
+        <a href="quiz.html">Triangle Quiz</a>
+        <a href="hypotenuse.html">Calculate hypotenuse </a>
+    </nav>
     <h1>Triangle Quiz</h1>
     <form action="" class="quiz-form">
         <div class="question-container">
