--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <a href="istriangle.html">Is Triangle ?</a>
+        <!-- <a href="istriangle.html">Is Triangle ?</a> -->
         <a href="quiz.html">Triangle Quiz</a>
         <a href="hypotenuse.html">Calculate hypotenuse </a>
     </nav>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="question-container">
-            <p>If a triangle has an angle of ?</p>
+            <p>If a triangle has an angle of 90 .What is it name ?</p>
 
             <label for="">
                 <input type="radio" name="question2" value="obtuse">Obtuse
