--- a/area.html
+++ b/area.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Is Triangle?</title>
+    <title>Area </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,36 +23,28 @@
                 <a class="link" href="hypotenuse.html">Calculate hypotenuse </a>
             </li>
             <li class="list-item-inline link">
-                <a class="link" href="area.html">Area of Triangle </a>
+                <a class="link" href="">Area of Triangle </a>
             </li>
 
         </ul>
     </nav>
 
-    <div class="center">
-        <h1>Is Triangle?</h1>
+    <div class="center font">
+        <h1>Calculate Area of Triangle</h1>
         <div id="label-input-group">
-            <label for="angle1">Angle1:</label>
-            <input type="number" class="angle-input">
-        </div>
-        <div id="label-input-group">
-            <label for="angle1">Angle2:</label>
-            <input type="number" class="angle-input">
-        </div>
-        <div id="label-input-group">
-            <label for="angle1">Angle3:</label>
-            <input type="number" class="angle-input">
+            <label for=""> a=</label>
+            <input type="number" class="side-input">
         </div>
 
-
-        <button id="is-triangle-btn">
-            Is Triangle?
-        </button>
-        <div id="output">
-
+        <div id="label-input-group">
+            <label for=""> b=</label>
+            <input type="number" class="side-input">
         </div>
+
+        <button id="hypotenuse-btn">Calculate Area</button>
+        <div id="output"></div>
     </div>
-    <script src="istriangle.js"></script>
+    <script src="area.js"></script>
 </body>
 
 </html>
