added more questions

--- a/quiz.html
+++ b/quiz.html
@@ -67,6 +67,40 @@
                     <input type="radio" name="question2" value="rightangle">Right Angled
                 </label>
             </div>
+
+            <div class="question-container">
+                <p>3 How many edges does a triangle have??</p>
+
+                <label for="">
+                    <input type="radio" name="question3" value="3">3
+                </label>
+
+                <label for="">
+                    <input type="radio" name="question3" value="4">4
+                </label>
+
+                <label for="">
+                    <input type="radio" name="question3" value="5">5
+                </label>
+            </div>
+
+            
+            <div class="question-container">
+                <p>4 What is the name of a triangle with equal vertices???</p>
+
+                <label for="">
+                    <input type="radio" name="question4" value="Equilateral">Equilateral
+                </label>
+
+                <label for="">
+                    <input type="radio" name="question4" value="Train">Train
+                </label>
+
+                <label for="">
+                    <input type="radio" name="question4" value="Triennial">Triennial
+                </label>
+            </div>
+            
         </form>
 
         <button id="submit-answer-btn">Submit Answers</button>
