--- a/quiz.html
+++ b/quiz.html
@@ -86,7 +86,8 @@
 
             
             <div class="question-container">
-                <p>4 What is the name of a triangle with equal vertices???</p>
+                <p>4
+                     What is the name of a triangle with equal vertices???</p>
 
                 <label for="">
                     <input type="radio" name="question4" value="Equilateral">Equilateral
